--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
         "whatsapp-botto"
     ],
     "website": "https://github.com/PrajjwalDatir/Kaoi#readme",
-    "repository": "https://github.com/sid24op/Kaoi",
+    "repository": "https://github.com/PrajjwalDatir/Kaoi.git",
     "logo": "https://avatars.githubusercontent.com/u/46681482?v=4",
     "success_url": "/",
     "env": {
